# LangChain-Student

./: README.md  pyproject.toml
Callbacks/: run_five.py
Chains/: chain.ipynb  chain_simples.py  multi_prompt_chain.py  output_parsers.py  run_tres.py  sequential_chain.py
LangChain_Inputs_and_Outputs/: run.py  teste.ipynb
Prompt_Templates/: Prompts.ipynb  prompt.json  run_dois.py
